ench: improve code + add projects endpoint
